Finished Presentation layout

--- a/_layouts/presentation_feed.html
+++ b/_layouts/presentation_feed.html
@@ -1,12 +1,12 @@
 ---
-layout: default
+layout: page
 ---
 
 <div class="home">
 
   <div class="jumbotron jumbotron-fluid">
 	<div class="container">
-	  {{ content | escape }}
+	  {{ content }}
 	</div>
   </div>	
 
